# kg-parser

./: .gitignore  LICENSE  README.md  api_jan_output.json  api_jan_output_dict.json  api_jan_output_list.json  api_openai_output.json  api_openai_output_dict.json  api_openai_output_list.json  environment.yml  jan_output.json  openai_output.json  pyproject.toml  requirements.txt  test_api.py  test_input.json
kg_parser/: __init__.py  cli.py  config.py  core.py  models.py  prompt_templates.py  utils.py
