[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-parser"
version = "0.1.1"
description = "A Python package to parse text into a knowledge graph using LLMs."
authors = [
    { name = "Daniel Ariza", email = "danielarizae@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "device-selector==0.1.0",
    "transformers>=4.28.0",
    "torch>=1.13.0",
    "openai==1.61.1",
    "requests",
    "tqdm"
]

[project.scripts]
kg-parser = "kg_parser.cli:main"

[project.urls]
Repository = "https://github.com/darizae/kg-parser"
